[package]
name = "file-encryptor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.22.1"
thiserror = "1.0"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-dialog = "2.0.4"
tauri-plugin-fs = "2.0.4"
